--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sapo QL</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="container">
-        <div>
-            <img src="" alt="">
+        <div class="image">
+            <img src="main.jpg" alt="que mirai">
         </div>
-        <div>
+        <div class="text">
             <h1>Sapo Qliao</h1>
         </div>
     </div>
